# shuttle

./: .gitignore  CMakeLists.txt  README.md  display.cpp  shuttle.cpp  shuttle.ino
bsp/Servo/src/: Servo.h
cad/: assembly.a3d  basement.m3d  basement.m3d.bak  basement2.m3d  bumper-rear.m3d  hull-middle.m3d  hull-rear.m3d  longeron.m3d  motor_gear.m3d  rear_axis.m3d  rear_holder.m3d  rear_linker.m3d  rear_vtulka.m3d  rear_wheel.m3d  spoiler.m3d  test_1.webm  wheel_disc.m3d  wheel_disc.m3d.bak
cad/print/: basement-back.stl  basement-front.stl  bumper-rear.stl  hull-middle.stl  hull-rear.stl  longeron.stl  motor_gear.stl  rear_axis.stl  rear_holder.stl  rear_linker.stl  rear_linker2.stl  rear_vtulka.stl  rear_wheel.stl  spoiler.stl  wheel_disc.stl
history/: report_mbf_1.md
lib/: display.hpp  pinout.hpp  shuttle.hpp  temperature.hpp
lib/include/: pinout.hpp  shuttle.hpp
scad/: platform-back.scad
src/: dbh.cpp  lcd.cpp  main.cpp  ps2.cpp  rgbd.cpp  shuttle.cpp
src/include/: accelerometer.hpp  colors.hpp  dbh.hpp  lcd.hpp  led.hpp  messages.hpp  pinout.hpp  ps2.hpp  rgbd.hpp  ru_strings.hpp  shuttle.hpp  tcrt5000.hpp  temperature.hpp  ultrasonic.hpp
